<resources>
    <string name="app_name">Movie Db</string>
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_search">Search</string>
    <string name="bot_nav_watch_list">Watch list</string>
    <string name="bot_nav_profile">Profile</string>
    <string name="retry">Retry</string>
    <string name="you_are_offline">You are offline</string>
    <string name="no_internet_description">Please connect to the internet and try again</string>


    <string name="person_tab_layout_about">About</string>
    <string name="person_tab_layout_movies">Movies</string>
    <string name="person_tab_layout_tv_shows">TV Shows</string>
    <string name="mainFragment">MainFragment</string>
    <string name="person_info">
        <![CDATA[
            <b>Age: </b> %1d <br />
            <b>Birthday: </b> %2s <br />
            <b>From: </b> %3s <br />
            <b>Popularity: </b> %4s<br />
            <b>Biography </b>
        ]]>
    </string>
    <string name="show_more">Show more</string>
    <string name="read_more">Read more</string>
    <string name="onePoster">1 poster</string>
    <string name="posters">%d posters</string>
    <string name="oneBackdrop">1 backdrop</string>
    <string name="backdrops">%d backdrops</string>
    <string name="show_less">Show less</string>
    <string name="also_know_as">Also know as</string>
    <string name="images">Images</string>
    <string name="empty_data">Empty</string>
    <string name="know_for">Know for</string>
    <string name="save_image">Save image</string>
    <string name="share">Share</string>
    <string name="default_notification_channel_id">com.thuypham.ptithcm.baseapp</string>

    <string name="movie_tab_layout_about">About</string>
    <string name="movie_tab_layout_cast">Cast</string>
    <string name="movie_tab_layout_comment">Comments</string>
    <string name="movie_tab_layout_review">Reviews</string>
    <string name="movie_tab_layout_recommendations">Recommendations</string>
    <string name="movie_tab_layout_similar">Similar</string>

    <string name="duration">Duration: %s</string>
    <string name="movie_info">Movie info</string>
    <string name="trailers">Trailers</string>
    <string name="media">Media</string>
    <string name="go_to_collection">Go to collection</string>

    <!-- Movie info-->
    <string name="original_title">Original title</string>
    <string name="status">Status</string>
    <string name="run_time">Run time</string>
    <string name="original_language">Original language</string>
    <string name="production_countries">Production countries</string>
    <string name="certificate">Certificate</string>
    <string name="company">Company</string>
    <string name="budge">Budget</string>
    <string name="revenue">Revenue</string>

    <string name="see_more">See more</string>

    <string name="empty_msg">No %1s</string>
    <string name="empty_msg_detail">We could not find any %1s for this item.</string>
    <string name="profileLoginDescription">Login to synchronize your movie and your series</string>
    <string name="sign_in">Sign In</string>
    <string name="watch_list">Watch list</string>
    <string name="history">History</string>
    <string name="collection">Collection</string>
    <string name="ratings">Ratings</string>
    <string name="personal_lists">Personal lists</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="about">About</string>
    <string name="get_premium">Get premium</string>
    <string name="lists">Lists</string>

</resources>