<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.HomeFragment"
        android:label="@string/bot_nav_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.ProfileFragment"
        android:label="@string/bot_nav_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.SearchFragment"
        android:label="@string/bot_nav_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/watchlistFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.WatchListFragment"
        android:label="@string/bot_nav_watch_list"
        tools:layout="@layout/fragment_watchlist" />
    <fragment
        android:id="@+id/movieCategoryFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.MovieCategoryFragment"
        android:label="MovieCategoryFragment"
        tools:layout="@layout/fragment_movie_category" />
    <fragment
        android:id="@+id/genresFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.GenresFragment"
        android:label="GenresFragment"
        tools:layout="@layout/fragment_genres" />
    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.PeopleFragment"
        android:label="PeopleFragment"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/movieDatailFragment"
        android:name="com.thuypham.ptithcm.baseapp.ui.fragment.MovieDetailFragment"
        android:label="MovieDetailFragment"
        tools:layout="@layout/fragment_movie_detail" />

    <include app:graph="@navigation/person_graph" />

</navigation>