<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNoWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_wifi" />

        <TextView
            android:id="@+id/tvNoInternetTitle"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/you_are_offline"
            android:textColor="@color/textColor2"
            app:layout_constraintTop_toBottomOf="@id/ivNoWifi" />

        <TextView
            android:id="@+id/tvNoInternetDescription"
            style="@style/Text16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/no_internet_description"
            android:textColor="@color/textColor2"
            app:layout_constraintTop_toBottomOf="@id/ivNoWifi" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/bg_round_corner"
            android:backgroundTint="@color/red"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>
</layout>