<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/margin24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInfo"
                style="@style/TextPersonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                tools:text="About" />

            <TextView
                android:id="@+id/tvBiography"
                style="@style/TextPersonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/x_small_padding"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:maxLines="3"
                tools:text="Biography description" />

            <TextView
                android:id="@+id/tvBtnShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:paddingVertical="@dimen/x_small_padding"
                android:text="@string/show_more"
                android:textColor="@color/red" />


            <TextView
                android:id="@+id/tvAlsoKnowAs"
                style="@style/TextPersonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/also_know_as"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvKnowAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin24"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_know_as" />


            <TextView
                android:id="@+id/tvImage"
                style="@style/Text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/default_margin"
                android:background="?attr/selectableItemBackground"
                android:gravity="center|start"
                android:text="@string/images"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImages"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_person_img_height"
                android:layout_marginTop="@dimen/default_margin"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin24"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_person_image"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvKnowFor"
                style="@style/Text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/margin24"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:text="@string/know_for"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMoviesKnowFor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_rc_movie_height"
                android:layout_marginTop="@dimen/default_margin"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin24"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie"
                tools:visibility="visible" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>