<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/margin24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOverView"
                style="@style/TextPersonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/x_small_padding"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:maxLines="3"
                tools:text="Movie overview" />

            <TextView
                android:id="@+id/tvBtnShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:paddingVertical="@dimen/x_small_padding"
                android:text="@string/show_more"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tvGenres"
                style="@style/TextPersonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/movie_genres"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin24"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_know_as" />

            <TextView
                android:id="@+id/tvMovieInfo"
                style="@style/TextPersonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_xl"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="@dimen/margin24"
                android:paddingVertical="@dimen/small_padding"
                android:text="@string/movie_info"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutMovieInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin24" />

            <FrameLayout
                android:id="@+id/frameCollection"
                style="@style/Selectable"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="@dimen/default_margin"
                android:visibility="gone"
                tools:visibility="visible">

                <com.thuypham.ptithcm.baseapp.customview.RatioImageView
                    android:id="@+id/ivCollection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:dimenRatio="17:10"
                    app:riv_corner_radius="@dimen/itemMovieCorner"
                    tools:layout_height="200dp"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tvCollectionName"
                    style="@style/TextTitle.Shadow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin24"
                    android:layout_marginTop="@dimen/default_margin_xl"
                    android:gravity="center"
                    android:paddingVertical="@dimen/x_small_padding"
                    android:shadowColor="@color/gray"
                    android:shadowDy="5"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="Collection name" />

                <TextView
                    android:id="@+id/tvGotoCollection"
                    style="@style/TextTitle.Shadow.Selectable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginHorizontal="@dimen/margin24"
                    android:layout_marginTop="@dimen/default_margin_xl"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/bg_round_corner"
                    android:backgroundTint="@color/colorGray50"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/default_padding"
                    android:paddingVertical="@dimen/x_small_padding"
                    android:shadowColor="@color/gray"
                    android:shadowDy="5"
                    android:text="@string/go_to_collection"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvTrailers"
                style="@style/Text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin24"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|start"
                android:paddingHorizontal="@dimen/margin24"
                android:text="@string/trailers"
                android:textStyle="bold"
                android:visibility="gone"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrailers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rcTrailerHeight"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin24"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_trailer"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvMedia"
                style="@style/Text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|start"
                android:paddingHorizontal="@dimen/margin24"
                android:paddingVertical="@dimen/small_padding"
                android:text="@string/media"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/default_margin_xl"
                android:visibility="gone"
                tools:visibility="visible">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivPoster"
                    style="@style/Selectable"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="2:3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    app:riv_corner_radius="@dimen/itemMovieCorner"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tvPosterCount"
                    style="@style/TextTitle.Shadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin_xl"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14"
                    app:layout_constraintBottom_toBottomOf="@id/ivPoster"
                    app:layout_constraintEnd_toEndOf="@id/ivPoster"
                    app:layout_constraintStart_toStartOf="@id/ivPoster"
                    tools:text="Poster count" />


                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivBackdrop"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="3:2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivPoster"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/itemMovieCorner"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tvBackdropCount"
                    style="@style/TextTitle.Shadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin_xl"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14"
                    app:layout_constraintBottom_toBottomOf="@id/ivBackdrop"
                    app:layout_constraintEnd_toEndOf="@id/ivBackdrop"
                    app:layout_constraintStart_toStartOf="@id/ivBackdrop"
                    tools:text="Backdrop count" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>